# India_GIS-Portal

./: .gitignore  .replit  README.md  app.py  base64.txt  create_asset_file.py  debug_aqi_pdf.py  gee_utils.py  get_base64.py  index.html  india_cities.py  main.py  monitoring.db  pyproject.toml  replit.md  requirements.txt
.github/workflows/: keep_alive.yml
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml  secrets.toml
attached_assets/: Pasted-ee-ee-exception-EEException-Geometry-difference-Unable-_1764769335384.txt
components/: charts.py  legends.py  map_asset.py  maps.py  theme_manager.py  ui.py
pages/: 10_Jal_AI_Water_Resilience.py  1_LULC_Vegetation.py  2_AQI_Analysis.py  3_Urban_Heat_Climate.py  4_Predictive_Analysis.py  5_Comprehensive_Report.py  5_Earthquake_Hazard.py  5_Monitoring_Alerts.py  6_Comprehensive_Report.py  7_Comparison_Module.py  7_Future_Roadmap.py  8_Future_Roadmap.py  9_Methodology_Limitations.py
services/: __init__.py  aqi_logic.py  comparison_export.py  comparison_service.py  earthquake_core.py  earthquake_export.py  exports.py  gee_aqi.py  gee_core.py  gee_indices.py  gee_lst.py  gee_lulc.py  gee_trends.py  gee_water.py  insights.py  jal_report.py  monitoring.py  notifications.py  prediction.py  road_network.py  storage.py  sustainability_report.py  timelapse.py
