[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.7.3",
    "folium>=0.20.0",
    "geemap>=0.36.6",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "reportlab>=4.4.5",
    "streamlit>=1.51.0",
    "streamlit-folium>=0.25.3",
]
